syntax = "proto3";

option go_package = "pkg/notification";

import  "google/protobuf/empty.proto";

service NotificationService {
  // Метод получения количества непрочитанных уведомлений
  rpc GetNotificationCount (google.protobuf.Empty) returns (NotificationCountOut) {}
  // Метод получения уведомлений по limit и offset
  rpc GetNotification (NotificationIn) returns (NotificationOut) {}
  // Метод отметки уведомления как прочитанного
  rpc MarkNotificationsAsRead (MarkNotificationsAsReadIn) returns (google.protobuf.Empty) {}
  // Метод для отправки кода регистрации
  rpc SendVerificationCode (SendVerificationCodeIn) returns (google.protobuf.Empty) {};
  // Метод для отправки кода для линковки школьного профиля к платформенному
  rpc SendEduCode (SendEduCodeIn) returns (google.protobuf.Empty) {};
}

// Выходное сообщение для метода GetNotificationCount
message NotificationCountOut {
  // Количество непрочитанных сообщений
  int64 count = 1;
}

// Входное сообщение для получения уведомлений
message NotificationIn {
  // Лимит для уведомлений
  int64 limit = 1;
  // Офсет для уведомлений
  int64 offset = 2;
}

// Сущность Уведомление
message Notification {
  // ID уведомления
  int64 id = 1;
  // Тест уведомления
  string text = 2;
  // состояние уведомления (прочитано или нет)
  bool isRead = 3;
}

// ответсное сообщение на запрос уведомлений пользователя
message NotificationOut {
  // Список сущностей Уведомление
  repeated Notification notifications = 1;
}

// Входное сообщение для отметки уведомления как прочитанного
message MarkNotificationsAsReadIn {
  // ID уведомлений
  repeated int64 notification_ids = 1;
}

message SendVerificationCodeIn {
  // Email адресата
  string email = 1;
  // Отправляемый код
  string code = 2;
}

message SendEduCodeIn {
  // Email адресата
  string email = 1;
  // Отправляемый код
  string code = 2;
}

// == kafka Event ==

// Сообщение для отправки приглашения на платформу
message NewUserInvite {
  // Email нового пользователя
  string email = 1;
  // UUID нового пользователя
  string uuid = 2;
}